update unit tests to use nested classes and improve readability (#228)